# CloudTransit

./: .gitignore  Application.hs  CloudTransit.cabal  DeployRun.sh  Foundation.hs  Import.hs  PreparePackages.sh  RunTests.sh
Gps/: Gps.hs  GpsTest  GpsTest.hs  GpsTypes.hs
Handler/: Home.hs  Home.hs~
config/: postgresql.yml  postgresql.yml~  settings.yml
embedded/: GpsImport.hs  GpsModule.hs  RangeFinderModule.hs  embedded.cabal  main  main.hs  tests.hs  ubuntu@192.168.1.9
embedded/Gps/: GpsTypes.hs  MessageTypeConversion.hs  MessageTypes.hs
embedded/app/: main.hs
embedded/tests/: GpsTest.hs  TestImport.hs
static/combined/: 0NcPaWt3.js  S9yXwri1.css  Tu652w_s.css
static/css/: bootstrap.css  bootstrap.css~
static/js/: bootstrap.min.js  jquery.bootswatch.js  jquery.min.js
templates/: default-layout-wrapper.hamlet  default-layout-wrapper.hamlet~  homepage.hamlet  homepage.hamlet~  homepage.lucius  homepage.lucius~
tests/: GpsTest.hs  HomeTest.hs  main.hs
web/: CloudTransit.cabal  Foundation.hs  GpsImport.hs  devel.hs
web/config/: client_session_key.aes  keter.yaml
web/deploy/: Procfile
web/static/combined/: NFgT4DOD.js  _hDB5JYp.css
web/static/js/: jquery.smooth-scroll.min.js
web/static/tmp/: autogen--d1L-Shx.css  autogen--mhRVQWE.css  autogen-1NUfZIul.css  autogen-37jC1kFd.css  autogen-3vKf94r6.css  autogen-4VG2t9eL.css  autogen-4r3sgCJG.css  autogen-59tabE2U.css  autogen-5cJJT_0V.css  autogen-5jX5Y6SN.css  autogen-8-KSP-J5.css  autogen-89WFVHhU.css  autogen-9mINe78q.css  autogen-9vstPfc6.css  autogen-ADC7b08M.css  autogen-CWiCOgfR.css  autogen-CfmCkX1c.css  autogen-DYongBSc.css  autogen-Ei87UHXE.css  autogen-FtNK0Zpn.css  (+73 more)
web/templates/: homepage.lucius
web/tests/: TestImport.hs  main.hs
